Fix uneven mobile margins and increase content width

--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ img {
 @media all and (orientation:portrait) {
     body {
         font-size: 22px;
-        max-width: 85%;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 0 20px;
+        width: 92%;
+        margin: 50px auto 0;
+        padding: 0;
+        max-width: none;
     }
 }
